# finelauncher

./: .gitignore  README.md  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.ts
.github/workflows/: arm.yml  build.yml
environment/: apt_packages.txt
public/: splashscreen.html
public/languages/: en_us.json  ru_ru.json
src/: App.tsx  Layout.tsx  Router.tsx  api.ts  constants.ts  index.css  index.scss  main.tsx  pages.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: directory.rs  discord_presence.rs  discord_rpc.rs  download.rs  download_mod.rs  download_version.rs  file_handler.rs  json_handler.rs  lib.rs  main.rs  run.rs  unzip.rs  unzipper.rs
src/Overlay/: index.tsx
src/components/BoxAnimation/: BoxAnimation.css  index.tsx
src/components/BoxesAnimation/: BoxesAnimation.css  index.tsx
src/components/BubblesAnimation/: BubblesAnimation.css  BubblesAnimation.module.css  index.tsx
src/components/ChangeVersion/: ChangeVersion.tsx  interface.ts
src/components/Instance/: index.tsx
src/components/InstanceMenuItem/: index.tsx
src/components/InstancesMenu/: index.tsx
src/components/Key/: Key.module.css  index.tsx
src/components/Main/: index.tsx
src/components/NewAlert/: index.tsx
src/components/NewVersionSelect/: NewVersionSelect.scss  NewVersionSelect.tsx  interface.ts
src/components/Select/: index.tsx
src/components/Sidebar/: Sidebar.module.scss  data.ts  index.tsx
src/components/Theme/: index.tsx
src/components/Titlebar/: Titlebar.module.scss  data.ts  index.tsx
src/components/VersionSelect/: VersionSelect.interface.ts  index.tsx
src/components/greatContribution/: GreatContribution.tsx
src/components/mod/: Mod.module.scss  Mod.tsx  interface.ts
src/components/newVersion/: NewVersion.module.css  NewVersion.tsx
src/components/select/: Select.tsx
src/components/sidebar/: Sidebar.module.css  Sidebar.module.scss  Sidebar.tsx
src/components/titlebar/: Titlebar.module.css  Titlebar.module.scss  Titlebar.tsx
src/components/version/: Version.module.scss  Version.tsx  interface.ts
src/components/version-select/: VersionSelect.scss  VersionSelect.tsx
src/components/versionSelect/: VersionSelect.scss  VersionSelect.tsx  interface.ts
src/contexts/: AlertProvider.tsx  GameProvider.tsx  ReactQueryProvider.tsx  SettingsProvider.tsx
src/languages/: en_us.json  index.ts  ru_ru.json
src/modals/ChangeVersionModal/: ChangeVersionModal.interface.ts  ChangeVersionModal.module.scss  index.tsx
src/modals/DownloadModModal/: DownloadModModal.module.css  index.tsx
src/modals/LoadingModal/: LoadingModal.module.css  LoadingModal.module.scss  index.tsx
src/modals/ModModal/: ModModal.types.ts  index.tsx
src/modals/SuccessModal/: SuccessModal.module.css  index.tsx
src/pages/: Home.tsx  Mods.tsx  NewVersion.tsx  Settings.tsx  Version.tsx  Versions.tsx  index.ts  index.tsx
src/pages/About/: index.tsx
src/pages/AboutPage/: index.tsx
src/pages/Home/: index.tsx
src/pages/HomePage/: Home.module.scss  Home.tsx  index.tsx
src/pages/InstancePage/: index.tsx
src/pages/Instances/: index.tsx
src/pages/InstancesPage/: index.tsx
src/pages/Layout/: index.tsx
src/pages/ModPage/: Mod.tsx  ModPage.interface.ts  ModPage.module.scss  index.tsx
src/pages/ModsPage/: Mods.tsx  ModsPage.interface.ts  ModsPage.module.scss  ModsPage.types.ts  index.tsx
src/pages/NewInstance/: index.tsx
src/pages/NewInstancePage/: index.tsx
src/pages/NewVersion/: NewVersion.tsx
src/pages/NewVersionPage/: NewVersion.tsx  NewVersionPage.module.scss  index.tsx  interface.ts
src/pages/NotFound/: index.tsx
src/pages/Settings/: index.tsx
src/pages/SettingsPage/: Settings.tsx  SettingsPage.module.scss  data.ts  index.tsx
src/pages/VersionPage/: Version.tsx  VersionPage.module.scss  index.tsx
src/pages/VersionsPage/: Versions.tsx  index.tsx  (+1 more)
src/services/: discordRPC.ts  download.ts  instanceManager.ts  localStorage.ts  mod.ts  themeService.ts  translatableText.ts  voxelworld.ts
src/utils/: TranslatableText.ts  discordRPC.ts  download.ts  instanceManager.ts  invokes.ts  launcherData.ts  localStorage.ts  mod.ts  themeManager.ts  themes.ts  versionManager.ts
(+127 files in other folders)
