[package]
name = "finelauncher"
version = "0.0.1"
description = "finelauncher"
authors = ["finesoldatik"]
license = "MPL"
repository = "https://github.com/finesoldatik/finelauncher"
default-run = "finelauncher"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
zip-extract = "0.1.3"
downloader = "0.2.7"
directories = "5.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "fs-remove-dir", "shell-execute", "shell-open", "fs-rename-file", "fs-write-file", "http-all", "fs-exists", "fs-create-dir", "path-all", "window-set-focus", "window-show", "window-start-dragging", "window-set-fullscreen", "fs-read-dir", "window-unminimize", "window-close", "window-minimize", "window-maximize", "window-hide", "os-all", "window-unmaximize", "system-tray", "cli"] }
glob = "0.3.1"
tokio = { version = "1.37.0", features = ["full"] }
nix = { version = "0.28.0", features = ["signal"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
